# konami-source

./: Build.bat  Build.ps1  CMakeLists.txt  CMakePresets.json  fix-konamiv2-skia-build-manual.ps1  fix-konamiv2-skia-build.ps1  slint.conf
cmake/: FindZLIB.cmake
src/: main.cpp
src/core/: Application.cpp  Application.hpp  Config.hpp  EventBus.hpp  Logger.hpp  ThreadPool.hpp
src/core/auth/: AuthManager.cpp  AuthManager.hpp  Encryption.cpp  Encryption.hpp  MicrosoftAuth.cpp  MicrosoftAuth.hpp  TokenStorage.cpp  TokenStorage.hpp
src/core/downloader/: CacheManager.cpp  CacheManager.hpp  DownloadManager.cpp  DownloadManager.hpp  DownloadTask.hpp  MojangAPI.cpp  MojangAPI.hpp
src/core/launcher/: GameLauncher.cpp  GameLauncher.hpp
src/core/models/: Models.hpp
src/core/mods/: ModManager.cpp  ModManager.hpp
src/core/profile/: ProfileManager.cpp  ProfileManager.hpp
src/core/skin/: SkinEngine.cpp  SkinEngine.hpp
src/models/: Account.hpp
src/ui/: main-window.slint
src/ui/animations/: effects.slint  loaders.slint  particles.slint  transitions.slint
src/ui/bridge/: UIBridge.cpp  UIBridge.hpp
src/ui/components/: avatar.slint  button.slint  card.slint  dropdown.slint  input.slint  loading.slint  modal.slint  notifications.slint  progress.slint  search.slint  sidebar.slint  slider.slint  tabs.slint  tag.slint  titlebar.slint  toggle.slint  tooltip.slint
src/ui/components/forms/: input.slint
src/ui/components/navigation/: sidebar.slint
src/ui/dialogs/: confirm.slint  crash-report.slint
src/ui/pages/: console-page.slint  home-page.slint  home.slint  login-page.slint  mods-page.slint  profiles-page.slint  settings-page.slint  skins-page.slint
src/ui/theme/: theme.slint
src/ui/themes/: aurora.slint  base.slint  cyberpunk.slint  dracula.slint  glassmorphism.slint  material.slint  nord.slint  retro-arcade.slint
src/utils/: FileUtils.cpp  FileUtils.hpp  HashUtils.hpp  HttpClient.cpp  HttpClient.hpp  JsonUtils.cpp  JsonUtils.hpp  PathUtils.hpp  PlatformUtils.cpp  PlatformUtils.hpp  StringUtils.cpp  StringUtils.hpp
